# Phylustrator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Phylustrator_Audit_Report.docx  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
benchmarks/: bench_rendering.py
data/: K00319.ale.uTs  K00319.ale.uml_rec  ReferenceTree.nwk  aerobic_predictions.tsv
docs/: changelog.md  contributing.md  gallery.md  index.md
docs/api/: io.md  radial.md  treestyle.md  utils.md  vertical.md  zombi2.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: formats.md  radial.md  styling.md  traits.md  transfers.md  vertical.md  zombi2.md
examples/data/ale/: 100_prunedtree.nwk.ale.uTs  100_prunedtree.nwk.ale.uml_rec  101_prunedtree.nwk.ale.uTs  101_prunedtree.nwk.ale.uml_rec  102_prunedtree.nwk.ale.uml_rec  103_prunedtree.nwk.ale.uTs  103_prunedtree.nwk.ale.uml_rec  104_prunedtree.nwk.ale.uml_rec  105_prunedtree.nwk.ale.uTs  105_prunedtree.nwk.ale.uml_rec  106_prunedtree.nwk.ale.uml_rec  107_prunedtree.nwk.ale.uTs  107_prunedtree.nwk.ale.uml_rec  109_prunedtree.nwk.ale.uTs  109_prunedtree.nwk.ale.uml_rec  10_prunedtree.nwk.ale.uTs  10_prunedtree.nwk.ale.uml_rec  110_prunedtree.nwk.ale.uTs  110_prunedtree.nwk.ale.uml_rec  111_prunedtree.nwk.ale.uml_rec  11_prunedtree.nwk.ale.uTs  11_prunedtree.nwk.ale.uml_rec  128_prunedtree.nwk.ale.uml_rec  12_prunedtree.nwk.ale.uml_rec  13_prunedtree.nwk.ale.uTs  13_prunedtree.nwk.ale.uml_rec  14_prunedtree.nwk.ale.uTs  14_prunedtree.nwk.ale.uml_rec  15_prunedtree.nwk.ale.uTs  15_prunedtree.nwk.ale.uml_rec  16_prunedtree.nwk.ale.uTs  16_prunedtree.nwk.ale.uml_rec  17_prunedtree.nwk.ale.uTs  17_prunedtree.nwk.ale.uml_rec  18_prunedtree.nwk.ale.uml_rec  19_prunedtree.nwk.ale.uTs  19_prunedtree.nwk.ale.uml_rec  20_prunedtree.nwk.ale.uTs  20_prunedtree.nwk.ale.uml_rec  21_prunedtree.nwk.ale.uTs  (+147 more)
examples/data/alerax/: ccpdim.txt  fractionMissing.txt  perSpeciesCoverage.txt  per_fam_likelihoods.txt
examples/data/basic/: tree.nwk  (+3 more)
notebooks/: 00.VerticalTrees.ipynb  01.RadialTrees.ipynb  02.Zombi.ipynb  03.ALE.ipynb  04.AleRax.ipynb  05.AddingAncestralImages.ipynb  1.test.ipynb  2.aerobic_metabolism.ipynb  3.ale_parser.ipynb  4.alerax.ipynb  Untitled.ipynb  extant_diverse_pruned.newick  zombi.ipynb
src/phylustrator/: __init__.py  ale_parser.py  alerax_parser.py  drawing.py  io.py  legacy.py  utils.py  zombi2.py  zombi_parser.py
tests/: conftest.py  test_plotting_smoke.py  tests_drawings.py  tests_io.py  tests_utils.py  tests_zombi2.py
(+1375 files in other folders)
